tests/ui/impl-trait/issue-55872.stderr
error: type parameter `T` is mentioned in hidden type of type alias impl trait, but is not declared in its generic args
  --> $DIR/issue-55872.rs:13:9
   |
LL |         || ()
   |         ^^^^^

error: aborting due to 1 previous error

